--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,8 +40,9 @@ jobs:
         with:
           node-version: 10.19
           registry-url: https://registry.npmjs.org/
+      - run: npm i
       - run: |
               git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/express-labs/pure-react-carousel.git
-              npx gh-pages -d ./dev -u "github-actions-bot <support+actions@github.com>"
+              npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
