--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": "15.x || 16.x || 17.x",
-    "react-dom": "15.x || 16.x || 17.x"
+    "react": "15.x || 16.x || 17.x || 18.x",
+    "react-dom": "15.x || 16.x || 17.x || 18.x"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
