--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "engines": {
+    "node": ">=10.16.1",
+    "npm": "6.x"
+  },
   "files": [
     "dist/**/*",
     "typings/**/*"
