--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build:watch": "watch 'npm run build' src",
     "prepublishOnly": "npm run build",
     "semantic-release": "semantic-release",
+    "predeploy": "rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
     "deploy": "gh-pages -d dev",
     "true-level": "rm -rf ./node_modules ./.babel-cache; npm install"
   },
@@ -89,6 +90,7 @@
     "redux": "^4.0.1",
     "regenerator-runtime": "^0.10.5",
     "replace-in-file": "^3.4.2",
+    "rimraf": "^3.0.2",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
