--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "test": "BABEL_ENV=test jest --no-cache",
     "test:coverage": "BABEL_ENV=test jest --coverage --no-cache",
     "test:watch": "BABEL_ENV=test jest --watch",
-    "start": "NODE_ENV=development rollup -w -c rollup.config.dev.js",
+    "start": "check-node-version --node $(cat .nvmrc) && NODE_ENV=development rollup -w -c rollup.config.dev.js",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore",
     "lint:fix": "eslint ./src --fix --ext .js --ext .jsx --ignore-path .gitignore",
     "prebuild": "rimraf dist",
-    "build": "NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
-    "build:commonjs": "NODE_ENV=production rollup -c rollup.config.cjs.js",
-    "build:es": "NODE_ENV=production rollup -c rollup.config.es.js",
+    "build": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.cjs.js && NODE_ENV=production rollup -c rollup.config.es.js",
+    "build:commonjs": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.cjs.js",
+    "build:es": "check-node-version --node $(cat .nvmrc) && NODE_ENV=production rollup -c rollup.config.es.js",
     "postbuild": "node postbuild.js",
-    "build:watch": "watch 'npm run build' src",
-    "prepublishOnly": "npm run build",
+    "build:watch": "check-node-version --node $(cat .nvmrc) && watch 'npm run build' src",
+    "prepublishOnly": "check-node-version --node $(cat .nvmrc) && npm run build",
     "semantic-release": "semantic-release",
-    "predeploy": "rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
-    "deploy": "gh-pages -d dev",
-    "true-level": "rm -rf ./node_modules ./.babel-cache; npm install"
+    "predeploy": "check-node-version --node $(cat .nvmrc) && rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
+    "deploy": "check-node-version --node $(cat .nvmrc) && gh-pages -d dev",
+    "true-level": "check-node-version --node $(cat .nvmrc) && rm -rf ./node_modules ./.babel-cache; npm install"
   },
   "typings": "typings/index.d.ts",
   "repository": {
@@ -63,6 +63,7 @@
     "acorn": "^6.0.4",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "check-node-version": "^4.2.1",
     "clone": "^2.1.1",
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
