--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -19,4 +19,4 @@ markComment: >
   for your contributions.
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: >
-  This issue has been automatically closed becuase it has not had recent activity.
+  This issue has been automatically closed because it has not had recent activity.
