--- a/package.json
+++ b/package.json
@@ -51,76 +51,42 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@types/react": "^16.7.6",
-    "acorn": "^6.0.4",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "@eslint/js": "^9.13.0",
     "check-node-version": "^4.2.1",
-    "clone": "^2.1.1",
-    "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "escape-string-regexp": "^1.0.5",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-mrb3k-jest": "^1.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-react": "7.14.3",
-    "gh-pages": "^2.0.1",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "escape-string-regexp": "^5.0.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "gh-pages": "^6.2.0",
+    "glob": "^11.0.0",
+    "globals": "^15.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
-    "object.omit": "^3.0.0",
-    "raf": "^3.4.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^5.1.0",
-    "react-test-renderer": "^16.6.0",
-    "redux": "^4.0.1",
-    "regenerator-runtime": "^0.10.5",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^1.20.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-livereload": "^1.0.1",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.3",
-    "rollup-plugin-uglify-es": "0.0.1",
-    "rollup-watch": "^4.3.1",
-    "semantic-release": "^19.0.5",
-    "uglify-es": "^3.3.5",
-    "waait": "^1.0.5",
-    "watch": "^1.0.2"
+    "inflight": "^1.0.6",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
+    "replace-in-file": "^8.2.0",
+    "rimraf": "^6.0.1",
+    "sass": "^1.80.4",
+    "semantic-release": "^24.1.3",
+    "storybook": "^8.3.6",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "waait": "^1.0.5"
   },
   "peerDependencies": {
-    "react": "15.x || 16.x || 17.x || 18.x",
-    "react-dom": "15.x || 16.x || 17.x || 18.x"
+    "react": "17.x || 18.x",
+    "react-dom": "17.x || 18.x"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "deep-freeze": "0.0.1",
-    "deepmerge": "^2.2.1",
-    "equals": "^1.0.5",
-    "prop-types": "^15.6.2"
+    "deepmerge": "^4.3.1",
+    "equals": "^1.0.5"
   },
   "jest": {
     "moduleNameMapper": {
@@ -180,5 +146,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
