--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "node-sass": "^4.12.0",
     "object.omit": "^3.0.0",
     "raf": "^3.4.1",
     "react": "^16.9.0",
@@ -105,7 +106,6 @@
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
-    "sass": "^1.80.4",
     "semantic-release": "^19.0.5",
     "uglify-es": "^3.3.5",
     "waait": "^1.0.5",
