savepoint before first publish

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "./index.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
