--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pure-react-carousel",
-  "version": "0.0.0-development",
+  "version": "2.0.0-rc.0",
   "description": "A highly impartial suite of React components that can be assembled by the consumer to create a responsive and aria compliant carousel with almost no limits on DOM structure or CSS styles.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -52,27 +52,16 @@
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "check-node-version": "^4.2.1",
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "escape-string-regexp": "^5.0.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "gh-pages": "^6.2.0",
-    "glob": "^11.0.0",
-    "globals": "^15.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "inflight": "^1.0.6",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-test-renderer": "^18.3.1",
-    "replace-in-file": "^8.2.0",
     "rimraf": "^6.0.1",
     "sass": "^1.80.4",
-    "semantic-release": "^24.1.3",
-    "storybook": "^8.3.6",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "waait": "^1.0.5"
@@ -83,10 +72,7 @@
   },
   "dependencies": {
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "deep-freeze": "0.0.1",
-    "deepmerge": "^4.3.1",
-    "equals": "^1.0.5"
+    "@types/react-dom": "^18.3.1"
   },
   "jest": {
     "moduleNameMapper": {
@@ -131,20 +117,6 @@
     ],
     "testEnvironmentOptions": {
       "resources": "usable"
-    }
-  },
-  "release": {
-    "branch": "master",
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "prettier": {
