--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "sass": "^1.80.4",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
-    "waait": "^1.0.5"
+    "waait": "^1.0.5",
+    "webpack": "^5.95.0"
   },
   "peerDependencies": {
     "react": "17.x || 18.x",
