savepoint before sharing

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "semantic-release": "semantic-release",
     "predeploy": "check-node-version --node $(cat .nvmrc) && rimraf dev/script && NODE_ENV=development rollup -c rollup.config.dev.js",
     "deploy": "check-node-version --node $(cat .nvmrc) && gh-pages -d dev",
-    "true-level": "check-node-version --node $(cat .nvmrc) && rm -rf ./node_modules ./.babel-cache; npm install"
+    "true-level": "check-node-version --node $(cat .nvmrc) && rm -rf ./node_modules ./.babel-cache; npm install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "typings": "typings/index.d.ts",
   "repository": {
@@ -51,17 +53,33 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
     "@eslint/js": "^9.13.0",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/react": "^8.3.6",
+    "@storybook/react-webpack5": "^8.3.6",
+    "@storybook/test": "^8.3.6",
+    "css-loader": "^6.11.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-storybook": "^0.10.1",
     "gh-pages": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.0.8",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
-    "sass": "^1.80.4",
+    "sass-loader": "^16.0.2",
+    "storybook": "^8.3.6",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "waait": "^1.0.5",
