--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "./index.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "stories"]
 }
