--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react-dom": "^18.3.1",
     "check-node-version": "^4.2.1",
     "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-storybook": "^0.10.1",
