--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "rollup-plugin-uglify": "^6.0.3",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-watch": "^4.3.1",
+    "sass": "^1.92.1",
     "semantic-release": "^19.0.5",
     "uglify-es": "^3.3.5",
     "waait": "^1.0.5",
