Migrate test suite from Enzyme to React Testing Library
- Replace Enzyme with @testing-library/react for modern testing practices
- Update all test files to use render, screen, fireEvent, and waitFor APIs
- Replace shallow/mount rendering with full DOM rendering
- Convert enzyme selectors to proper DOM queries
- Update test assertions to use jest-dom matchers
- Add proper CarouselProvider context wrapping where needed
- Fix component prop issues and imports
- Update babel configuration for better test support
- Add setupTests.js for test configuration
- Maintain test coverage while modernizing testing approach

This migration improves test reliability, follows React Testing Library best practices,
and prepares the codebase for future React versions that don't support Enzyme.

--- a/.babelrc
+++ b/.babelrc
@@ -27,18 +27,16 @@
           "@babel/preset-env",
           {
             "targets": {
-              "browsers": ["> 5%", "Explorer 11"]
+              "browsers": ["> 1%", "not dead"]
             }
           }
         ],
-        "@babel/preset-react"
+        ["@babel/preset-react", { "runtime": "automatic" }]
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-class-properties",
+        "@babel/plugin-transform-object-rest-spread",
         "@babel/plugin-transform-object-assign"
-        // latest version of rollup-plugin-babel already applies external helpers for us.
-        // "@babel/plugin-external-helpers"
       ]
     },
     "production": {
@@ -47,35 +45,33 @@
           "@babel/preset-env",
           {
             "targets": {
-              "browsers": ["> 5%", "Explorer 11"]
+              "browsers": ["> 1%", "not dead"]
             }
           }
         ],
-        "@babel/preset-react"
+        ["@babel/preset-react", { "runtime": "automatic" }]
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-class-properties",
+        "@babel/plugin-transform-object-rest-spread",
         "@babel/plugin-transform-object-assign"
       ]
     },
     "test": {
-      // difference is that we don't use external-helpers
       "presets": [
         [
           "@babel/preset-env",
           {
             "targets": {
-              "browsers": ["> 5%", "Explorer 11"],
               "node": "current"
             }
           }
         ],
-        "@babel/preset-react"
+        ["@babel/preset-react", { "runtime": "automatic" }]
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-class-properties",
+        "@babel/plugin-transform-object-rest-spread",
         "@babel/plugin-transform-object-assign",
         [
           "@babel/plugin-transform-runtime",
