--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pure-react-carousel",
   "version": "1.32.0",
+  "type": "module",
   "description": "A highly impartial suite of React components that can be assembled by the consumer to create a responsive and aria compliant carousel with almost no limits on DOM structure or CSS styles.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -50,63 +51,60 @@
   },
   "homepage": "https://github.com/express-labs/pure-react-carousel#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@types/react": "^16.7.6",
-    "acorn": "^6.0.4",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "@babel/core": "^7.25.0",
+    "@babel/eslint-parser": "^7.25.0",
+    "@babel/plugin-external-helpers": "^7.25.0",
+    "@babel/plugin-transform-class-properties": "^7.25.0",
+    "@babel/plugin-transform-object-assign": "^7.25.0",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.0",
+    "@babel/plugin-transform-runtime": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-react": "^7.25.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.0",
+    "@rollup/plugin-multi-entry": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-replace": "^6.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "@types/react": "^18.3.0",
+    "acorn": "^8.12.0",
     "check-node-version": "^4.2.1",
-    "clone": "^2.1.1",
-    "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "escape-string-regexp": "^1.0.5",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-mrb3k-jest": "^1.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-react": "7.14.3",
-    "gh-pages": "^2.0.1",
+    "clone": "^2.1.2",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jest": "^28.8.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.36.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "gh-pages": "^6.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "object.omit": "^3.0.0",
-    "raf": "^3.4.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^5.1.0",
-    "react-test-renderer": "^16.6.0",
-    "redux": "^4.0.1",
-    "regenerator-runtime": "^0.10.5",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^1.20.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^5.0.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-redux": "^9.1.0",
+    "react-test-renderer": "^18.3.0",
+    "redux": "^5.0.1",
+    "regenerator-runtime": "^0.14.0",
+    "replace-in-file": "^8.2.0",
+    "rimraf": "^6.0.0",
+    "rollup": "^4.22.0",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-livereload": "^1.0.1",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.3",
-    "rollup-plugin-uglify-es": "0.0.1",
-    "rollup-watch": "^4.3.1",
-    "semantic-release": "^19.0.5",
-    "uglify-es": "^3.3.5",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.3",
+    "sass": "^1.79.0",
+    "semantic-release": "^24.0.0",
     "waait": "^1.0.5",
     "watch": "^1.0.2"
   },
@@ -115,13 +113,17 @@
     "react-dom": "15.x || 16.x || 17.x || 18.x || 19.x"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
+    "@babel/runtime": "^7.25.0",
     "deep-freeze": "0.0.1",
-    "deepmerge": "^2.2.1",
+    "deepmerge": "^4.3.1",
     "equals": "^1.0.5",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.8.1"
   },
   "jest": {
+    "testEnvironment": "jsdom",
+    "extensionsToTreatAsEsm": [
+      ".jsx"
+    ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "identity-obj-proxy"
@@ -159,11 +161,33 @@
         "statements": 95
       }
     },
-    "setupFiles": [
-      "raf/polyfill"
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom",
+      "<rootDir>/src/setupTests.js"
     ],
     "testEnvironmentOptions": {
       "resources": "usable"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!())"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": [
+        "babel-jest",
+        {
+          "presets": [
+            [
+              "@babel/preset-env",
+              {
+                "targets": {
+                  "node": "current"
+                }
+              }
+            ],
+            "@babel/preset-react"
+          ]
+        }
+      ]
     }
   },
   "release": {
