--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "^16.7.6",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "acorn": "^6.0.4",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
@@ -67,7 +68,7 @@
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "escape-string-regexp": "^1.0.5",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -82,8 +83,8 @@
     "jest": "^24.9.0",
     "object.omit": "^3.0.0",
     "raf": "^3.4.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^5.1.0",
     "react-test-renderer": "^16.6.0",
     "redux": "^4.0.1",
@@ -120,6 +121,20 @@
     "deepmerge": "^2.2.1",
     "equals": "^1.0.5",
     "prop-types": "^15.6.2"
+  },
+  "overrides": {
+    "react-test-renderer": {
+      "react": "17.0.2",
+      "react-dom": "17.0.2"
+    },
+    "enzyme-adapter-react-16": {
+      "react": "17.0.2",
+      "react-dom": "17.0.2"
+    },
+    "react-redux": {
+      "react": "17.0.2",
+      "react-dom": "17.0.2"
+    }
   },
   "jest": {
     "moduleNameMapper": {
