--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   pull_request:
-    branches: [master]
+    branches: [ master ]
   workflow_dispatch:
 jobs:
   # This workflow contains a single job called "build"
@@ -13,15 +13,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: "25.2.1"
-
+          node-version: '10.16.1'
+          
       - name: Install Dependencies, run build, lint, and tests
         run: |
-          npm i
-          npm run lint
-          npm run test
-          npm run build
+            npm i
+            npm run lint
+            npm run test
+            npm run build
+            
